tests/ui/invalid_need_module_arg_position.stderr
error[E0277]: the trait bound `&str: From<&pyo3::prelude::PyModule>` is not satisfied
 --> tests/ui/invalid_need_module_arg_position.rs:6:26
  |
6 |     fn fail<'py>(string: &str, module: &'py PyModule) -> PyResult<&'py str> {
  |                          ^ the trait `From<&pyo3::prelude::PyModule>` is not implemented for `&str`
  |
  = help: the following other types implement trait `From<T>`:
            <String as From<char>>
            <String as From<Box<str>>>
            <String as From<Cow<'a, str>>>
            <String as From<&str>>
            <String as From<&mut str>>
            <String as From<&String>>
  = note: required for `&pyo3::prelude::PyModule` to implement `Into<&str>`
